--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fetch Task</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lambda Response Display</title>
+    <script>
+        // Function to fetch data from the Lambda function
+        async function fetchLambdaResponse() {
+            try {
+                // Replace 'YOUR_LAMBDA_ENDPOINT' with the actual endpoint of your Lambda function
+                const response = await fetch('https://lq452ygrnf.execute-api.ap-south-1.amazonaws.com/V1/Edittask');
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                const data = await response.json();
+                
+                // Update the HTML element with the response data
+                document.getElementById('lambdaResponse').textContent = JSON.stringify(data, null, 2);
+            } catch (error) {
+                console.error('Fetch error:', error);
+                document.getElementById('lambdaResponse').textContent = 'Error fetching data.';
+            }
+        }
+
+        // Call the function when the page loads
+        window.onload = fetchLambdaResponse;
+    </script>
 </head>
 <body>
-    <h1>Fetch Task by Employee ID</h1>
-    <form id="fetchForm">
-        <label for="employeeId">Employee ID:</label>
-        <input type="text" id="employeeId" name="EmployeeID" required>
-        <button type="submit">Fetch Tasks</button>
-    </form>
-    <div id="result"></div>
-
-    <script>
-        document.getElementById('fetchForm').onsubmit = function(event) {
-            event.preventDefault(); // Prevent default form submission
-
-            const employeeId = document.getElementById('employeeId').value.trim();
-            // Corrected URL with proper quotes
-            const apiUrl = `https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?EmployeeID=${encodeURIComponent(employeeId)}`;
-
-            fetch(apiUrl)
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('result').innerHTML = data;
-                })
-                .catch(error => {
-                    console.error('Error fetching data:', error);
-                });
-        };
-    </script>
+    <h1>Lambda Function Response</h1>
+    <pre id="lambdaResponse">Loading...</pre>
 </body>
 </html>
