--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         async function fetchLambdaResponse() {
             try {
                 // Replace 'YOUR_LAMBDA_ENDPOINT' with the actual endpoint of your Lambda function
-                const response = await fetch('https://lq452ygrnf.execute-api.ap-south-1.amazonaws.com/V1/Edittask');
+                const response = await fetch('https://zmyx3jjk74.execute-api.ap-south-1.amazonaws.com/default/Edittask');
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
                 }
