--- a/index.html
+++ b/index.html
@@ -4,31 +4,171 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lambda Response Display</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+        }
+        th, td {
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f4f4f4;
+        }
+        .button {
+            padding: 10px 15px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        .button:hover {
+            background-color: #45a049;
+        }
+        .popup, .overlay {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            border: 1px solid #ccc;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 1000;
+        }
+        .overlay {
+            display: none;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
+        .popup input, .popup textarea {
+            display: block;
+            margin: 10px 0;
+        }
+    </style>
+</head>
+<body>
+    <h1>Lambda Function Response</h1>
+    <div id="data-container">Loading...</div>
+
+    <!-- Edit Task Popup -->
+    <div id="popup" class="popup">
+        <h3>Edit Task</h3>
+        <form id="editForm">
+            <input type="hidden" id="taskId" name="taskId">
+            <label for="rating">Rating:</label>
+            <input type="number" id="rating" name="rating" min="1" max="5" required>
+            <label for="remark">Remark:</label>
+            <textarea id="remark" name="remark" rows="4" required></textarea>
+            <button type="submit" class="button">Submit</button>
+            <button type="button" class="button" onclick="closePopup()">Close</button>
+        </form>
+    </div>
+
+    <!-- Overlay for popup -->
+    <div id="overlay" class="overlay" onclick="closePopup()"></div>
+
     <script>
-        // Function to fetch data from the Lambda function
+        let selectedTaskId = null;
+
         async function fetchLambdaResponse() {
             try {
-                // Replace 'YOUR_LAMBDA_ENDPOINT' with the actual endpoint of your Lambda function
                 const response = await fetch('https://zmyx3jjk74.execute-api.ap-south-1.amazonaws.com/default/Edittask');
                 if (!response.ok) {
                     throw new Error('Network response was not ok');
                 }
                 const data = await response.json();
-                
-                // Update the HTML element with the response data
-                document.getElementById('lambdaResponse').textContent = JSON.stringify(data, null, 2);
+                displayData(data);
             } catch (error) {
                 console.error('Fetch error:', error);
-                document.getElementById('lambdaResponse').textContent = 'Error fetching data.';
+                document.getElementById('data-container').textContent = 'Error fetching data.';
             }
         }
 
-        // Call the function when the page loads
+        function displayData(data) {
+            let html = '<table><thead><tr><th>Employee ID</th><th>Name</th><th>Task</th><th>Start Date</th><th>End Date</th><th>Rating</th><th>Remark</th><th>Edit</th></tr></thead><tbody>';
+            data.forEach(task => {
+                html += `
+                    <tr>
+                        <td>${task.employeeId}</td>
+                        <td>${task.name}</td>
+                        <td>${task.task}</td>
+                        <td>${task.startDate}</td>
+                        <td>${task.endDate}</td>
+                        <td>${task.rating || ''}</td>
+                        <td>${task.remark || ''}</td>
+                        <td><button class="button" onclick="editTask('${task.id}')">Edit</button></td>
+                    </tr>
+                `;
+            });
+            html += '</tbody></table>';
+            document.getElementById('data-container').innerHTML = html;
+        }
+
+        function editTask(taskId) {
+            selectedTaskId = taskId;
+            // Open the popup
+            document.getElementById('popup').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
+        }
+
+        function closePopup() {
+            document.getElementById('popup').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
+        }
+
+        document.getElementById('editForm').onsubmit = async function(event) {
+            event.preventDefault();
+            const rating = document.getElementById('rating').value.trim();
+            const remark = document.getElementById('remark').value.trim();
+
+            try {
+                const response = await fetch('https://zmyx3jjk74.execute-api.ap-south-1.amazonaws.com/default/UpdateTask', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        taskId: selectedTaskId,
+                        rating: rating,
+                        remark: remark
+                    })
+                });
+
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+
+                const result = await response.json();
+                if (result.success) {
+                    alert('Task updated successfully');
+                    fetchLambdaResponse(); // Refresh data
+                    closePopup();
+                } else {
+                    alert('Error updating task: ' + result.error);
+                }
+            } catch (error) {
+                console.error('Fetch error:', error);
+                alert('Error updating task');
+            }
+        };
+
+        // Fetch data when the page loads
         window.onload = fetchLambdaResponse;
     </script>
-</head>
-<body>
-    <h1>Lambda Function Response</h1>
-    <pre id="lambdaResponse">Loading...</pre>
 </body>
 </html>
