--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
             try {
                 const response = await fetch('https://zmyx3jjk74.execute-api.ap-south-1.amazonaws.com/default/Edittask');
                 if (!response.ok) {
-                    throw new Error('Network response was not ok');
+                    throw new Error('Network response was not ok: ' + response.statusText);
                 }
                 const data = await response.json();
                 displayData(data);
             } catch (error) {
                 console.error('Fetch error:', error);
-                document.getElementById('data-container').textContent = 'Error fetching data.';
+                document.getElementById('data-container').textContent = 'Error fetching data: ' + error.message;
             }
         }
 
@@ -121,7 +121,6 @@
 
         function editTask(taskId) {
             selectedTaskId = taskId;
-            // Open the popup
             document.getElementById('popup').style.display = 'block';
             document.getElementById('overlay').style.display = 'block';
         }
@@ -150,7 +149,7 @@
                 });
 
                 if (!response.ok) {
-                    throw new Error('Network response was not ok');
+                    throw new Error('Network response was not ok: ' + response.statusText);
                 }
 
                 const result = await response.json();
@@ -163,11 +162,10 @@
                 }
             } catch (error) {
                 console.error('Fetch error:', error);
-                alert('Error updating task');
+                alert('Error updating task: ' + error.message);
             }
         };
 
-        // Fetch data when the page loads
         window.onload = fetchLambdaResponse;
     </script>
 </body>
