--- a/index.html
+++ b/index.html
@@ -3,27 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lambda Response Display</title>
+    <title>Task Management</title>
     <style>
-        /* Add your styles here */
-        /* ... */
+        body {
+            font-family: Arial, sans-serif;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+        }
+        th, td {
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f4f4f4;
+        }
+        .button {
+            padding: 10px 15px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        .button:hover {
+            background-color: #45a049;
+        }
+        .popup {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            border: 1px solid #ccc;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 1000;
+        }
+        .popup button {
+            margin-top: 10px;
+        }
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
     </style>
 </head>
 <body>
-    <h1>Lambda Function Response</h1>
-    <div id="data-container">Loading...</div>
+    <h1>Task Management</h1>
+    <form id="fetchForm">
+        <label for="employeeId">Employee ID:</label>
+        <input type="text" id="employeeId" name="employeeId" required>
+        <button type="submit" class="button">Fetch Tasks</button>
+    </form>
 
-    <!-- Edit Task Popup -->
-    <div id="popup" class="popup">
+    <div id="taskTableContainer"></div>
+
+    <!-- Popup for editing tasks -->
+    <div id="editPopup" class="popup">
         <h3>Edit Task</h3>
         <form id="editForm">
-            <input type="hidden" id="taskId" name="taskId">
+            <label for="taskSelect">Select Task:</label>
+            <select id="taskSelect" name="taskId" required></select>
+            <br>
             <label for="rating">Rating:</label>
             <input type="number" id="rating" name="rating" min="1" max="5" required>
+            <br>
             <label for="remark">Remark:</label>
-            <textarea id="remark" name="remark" rows="4" required></textarea>
-            <button type="submit">Submit</button>
-            <button type="button" onclick="closePopup()">Close</button>
+            <textarea id="remark" name="remark" rows="4" cols="50" required></textarea>
+            <br>
+            <button type="submit" class="button">Submit</button>
+            <button type="button" class="button" onclick="closePopup()">Close</button>
         </form>
     </div>
 
@@ -31,88 +92,98 @@
     <div id="overlay" class="overlay" onclick="closePopup()"></div>
 
     <script>
-        async function fetchLambdaResponse() {
+        document.getElementById('fetchForm').onsubmit = async function(event) {
+            event.preventDefault();
+            const employeeId = document.getElementById('employeeId').value.trim();
+            const apiUrl = `https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?employeeId=${encodeURIComponent(employeeId)}`;
+
             try {
-                const response = await fetch('https://zmyx3jjk74.execute-api.ap-south-1.amazonaws.com/default/Edittask');
+                const response = await fetch(apiUrl);
                 if (!response.ok) {
-                    throw new Error(`Network response was not ok: ${response.statusText}`);
+                    throw new Error('Network response was not ok');
                 }
                 const data = await response.json();
-                displayData(data);
+
+                // Display tasks in a table
+                const tableContainer = document.getElementById('taskTableContainer');
+                let html = '<table><thead><tr><th>Task ID</th><th>Task Description</th><th>Edit</th></tr></thead><tbody>';
+
+                data.tasks.forEach(task => {
+                    html += `
+                        <tr>
+                            <td>${task.id}</td>
+                            <td>${task.description}</td>
+                            <td><button class="button" onclick="editTask('${task.id}', '${task.description}')">Edit</button></td>
+                        </tr>
+                    `;
+                });
+
+                html += '</tbody></table>';
+                tableContainer.innerHTML = html;
+
             } catch (error) {
                 console.error('Fetch error:', error);
-                document.getElementById('data-container').textContent = `Error fetching data: ${error.message}`;
+                document.getElementById('taskTableContainer').innerHTML = 'Error fetching data.';
             }
-        }
+        };
 
-        function displayData(data) {
-            let html = '<table><thead><tr><th>Employee ID</th><th>Name</th><th>Task</th><th>Start Date</th><th>End Date</th><th>Rating</th><th>Remark</th><th>Edit</th></tr></thead><tbody>';
-            data.forEach(task => {
-                html += `
-                    <tr>
-                        <td>${task.employeeId}</td>
-                        <td>${task.name}</td>
-                        <td>${task.task}</td>
-                        <td>${task.startDate}</td>
-                        <td>${task.endDate}</td>
-                        <td>${task.rating || ''}</td>
-                        <td>${task.remark || ''}</td>
-                        <td><button onclick="editTask('${task.id}')">Edit</button></td>
-                    </tr>
-                `;
-            });
-            html += '</tbody></table>';
-            document.getElementById('data-container').innerHTML = html;
-        }
+        function editTask(taskId, description) {
+            const taskSelect = document.getElementById('taskSelect');
+            const editPopup = document.getElementById('editPopup');
+            const overlay = document.getElementById('overlay');
 
-        function editTask(taskId) {
-            selectedTaskId = taskId;
-            document.getElementById('popup').style.display = 'block';
-            document.getElementById('overlay').style.display = 'block';
-        }
+            // Populate the task select dropdown
+            taskSelect.innerHTML = `<option value="${taskId}">${description}</option>`;
 
-        function closePopup() {
-            document.getElementById('popup').style.display = 'none';
-            document.getElementById('overlay').style.display = 'none';
+            // Show the popup
+            editPopup.style.display = 'block';
+            overlay.style.display = 'block';
         }
 
         document.getElementById('editForm').onsubmit = async function(event) {
             event.preventDefault();
-            const rating = document.getElementById('rating').value.trim();
-            const remark = document.getElementById('remark').value.trim();
+            const taskId = document.getElementById('taskSelect').value;
+            const rating = document.getElementById('rating').value;
+            const remark = document.getElementById('remark').value;
+
+            const apiUrl = 'https://zmyx3jjk74.execute-api.ap-south-1.amazonaws.com/V1/Edittask';
 
             try {
-                const response = await fetch('https://zmyx3jjk74.execute-api.ap-south-1.amazonaws.com/default/UpdateTask', {
+                const response = await fetch(apiUrl, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
-                        taskId: selectedTaskId,
+                        taskId: taskId,
                         rating: rating,
                         remark: remark
                     })
                 });
 
                 if (!response.ok) {
-                    throw new Error(`Network response was not ok: ${response.statusText}`);
+                    throw new Error('Network response was not ok');
                 }
-
                 const result = await response.json();
+                
                 if (result.success) {
                     alert('Task updated successfully');
-                    fetchLambdaResponse(); // Refresh data
-                    closePopup();
+                    closePopup(); // Close the popup
+                    document.getElementById('fetchForm').dispatchEvent(new Event('submit')); // Refresh task list
                 } else {
-                    alert(`Error updating task: ${result.error}`);
+                    alert('Error updating task');
                 }
+
             } catch (error) {
-                console.error('Fetch error:', error);
-                alert(`Error updating task: ${error.message}`);
+                console.error('Update error:', error);
+                alert('Error updating task');
             }
         };
 
-        window.onload = fetchLambdaResponse;
+        function closePopup() {
+            document.getElementById('editPopup').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
+        }
     </script>
 </body>
 </html>
