--- a/index.html
+++ b/index.html
@@ -1,189 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Management</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-        th, td {
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f4f4f4;
-        }
-        .button {
-            padding: 10px 15px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        .button:hover {
-            background-color: #45a049;
-        }
-        .popup {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 20px;
-            border: 1px solid #ccc;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            z-index: 1000;
-        }
-        .popup button {
-            margin-top: 10px;
-        }
-        .overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            z-index: 999;
-        }
-    </style>
+    <title>Fetch Task</title>
 </head>
 <body>
-    <h1>Task Management</h1>
+    <h1>Fetch Task by Employee ID</h1>
     <form id="fetchForm">
         <label for="employeeId">Employee ID:</label>
-        <input type="text" id="employeeId" name="employeeId" required>
-        <button type="submit" class="button">Fetch Tasks</button>
+        <input type="text" id="employeeId" name="EmployeeID" required>
+        <button type="submit">Fetch Tasks</button>
     </form>
-
-    <div id="taskTableContainer"></div>
-
-    <!-- Popup for editing tasks -->
-    <div id="editPopup" class="popup">
-        <h3>Edit Task</h3>
-        <form id="editForm">
-            <label for="taskSelect">Select Task:</label>
-            <select id="taskSelect" name="taskId" required></select>
-            <br>
-            <label for="rating">Rating:</label>
-            <input type="number" id="rating" name="rating" min="1" max="5" required>
-            <br>
-            <label for="remark">Remark:</label>
-            <textarea id="remark" name="remark" rows="4" cols="50" required></textarea>
-            <br>
-            <button type="submit" class="button">Submit</button>
-            <button type="button" class="button" onclick="closePopup()">Close</button>
-        </form>
-    </div>
-
-    <!-- Overlay for popup -->
-    <div id="overlay" class="overlay" onclick="closePopup()"></div>
+    <div id="result"></div>
 
     <script>
-        document.getElementById('fetchForm').onsubmit = async function(event) {
-            event.preventDefault();
+        document.getElementById('fetchForm').onsubmit = function(event) {
+            event.preventDefault(); // Prevent default form submission
+
             const employeeId = document.getElementById('employeeId').value.trim();
-            const apiUrl = `https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?employeeId=${encodeURIComponent(employeeId)}`;
+            // Corrected URL with proper quotes
+            const apiUrl = `https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?EmployeeID=${encodeURIComponent(employeeId)}`;
 
-            try {
-                const response = await fetch(apiUrl);
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                const data = await response.json();
-
-                // Display tasks in a table
-                const tableContainer = document.getElementById('taskTableContainer');
-                let html = '<table><thead><tr><th>Task ID</th><th>Task Description</th><th>Edit</th></tr></thead><tbody>';
-
-                data.tasks.forEach(task => {
-                    html += `
-                        <tr>
-                            <td>${task.id}</td>
-                            <td>${task.description}</td>
-                            <td><button class="button" onclick="editTask('${task.id}', '${task.description}')">Edit</button></td>
-                        </tr>
-                    `;
+            fetch(apiUrl)
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('result').innerHTML = data;
+                })
+                .catch(error => {
+                    console.error('Error fetching data:', error);
                 });
-
-                html += '</tbody></table>';
-                tableContainer.innerHTML = html;
-
-            } catch (error) {
-                console.error('Fetch error:', error);
-                document.getElementById('taskTableContainer').innerHTML = 'Error fetching data.';
-            }
         };
-
-        function editTask(taskId, description) {
-            const taskSelect = document.getElementById('taskSelect');
-            const editPopup = document.getElementById('editPopup');
-            const overlay = document.getElementById('overlay');
-
-            // Populate the task select dropdown
-            taskSelect.innerHTML = `<option value="${taskId}">${description}</option>`;
-
-            // Show the popup
-            editPopup.style.display = 'block';
-            overlay.style.display = 'block';
-        }
-
-        document.getElementById('editForm').onsubmit = async function(event) {
-            event.preventDefault();
-            const taskId = document.getElementById('taskSelect').value;
-            const rating = document.getElementById('rating').value;
-            const remark = document.getElementById('remark').value;
-
-            const apiUrl = 'https://zmyx3jjk74.execute-api.ap-south-1.amazonaws.com/V1/Edittask';
-
-            try {
-                const response = await fetch(apiUrl, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({
-                        taskId: taskId,
-                        rating: rating,
-                        remark: remark
-                    })
-                });
-
-                if (!response.ok) {
-                    throw new Error('Network response was not ok');
-                }
-                const result = await response.json();
-                
-                if (result.success) {
-                    alert('Task updated successfully');
-                    closePopup(); // Close the popup
-                    document.getElementById('fetchForm').dispatchEvent(new Event('submit')); // Refresh task list
-                } else {
-                    alert('Error updating task');
-                }
-
-            } catch (error) {
-                console.error('Update error:', error);
-                alert('Error updating task');
-            }
-        };
-
-        function closePopup() {
-            document.getElementById('editPopup').style.display = 'none';
-            document.getElementById('overlay').style.display = 'none';
-        }
     </script>
 </body>
 </html>
