--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Fetch Task</title>
     <style>
-        /* Basic styling for the popup */
         .popup {
             display: none;
             position: fixed;
@@ -75,39 +74,34 @@
             const apiUrl = `https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?EmployeeID=${encodeURIComponent(employeeId)}`;
 
             fetch(apiUrl)
-                .then(response => {
-                    // Check if response is JSON
-                    const contentType = response.headers.get('content-type');
-                    if (contentType && contentType.includes('application/json')) {
-                        return response.json(); // Parse JSON response
-                    } else {
-                        return response.text(); // Parse as text if not JSON
-                    }
-                })
+                .then(response => response.text())  // Handle response as text
                 .then(data => {
-                    // If response was text and not JSON, log it and display error
-                    if (typeof data === 'string') {
-                        console.error('Received non-JSON response:', data);
-                        document.getElementById('result').innerHTML = 'Error: Received non-JSON response.';
-                        return;
-                    }
+                    // Display HTML response directly
+                    document.getElementById('result').innerHTML = data;
 
-                    // Construct table from JSON data
-                    const resultDiv = document.getElementById('result');
-                    let html = '<table border="1"><thead><tr><th>Task ID</th><th>Task Description</th><th>Edit</th></tr></thead><tbody>';
+                    // Extract task information and populate the popup
+                    const table = document.createElement('div');
+                    table.innerHTML = data;
+                    const rows = table.querySelectorAll('tbody tr');
+                    const taskSelect = document.getElementById('taskSelect');
+                    taskSelect.innerHTML = '';  // Clear existing options
 
-                    data.tasks.forEach(task => {
-                        html += `
-                            <tr>
-                                <td>${task.id}</td>
-                                <td>${task.description}</td>
-                                <td><button onclick="editTask('${task.id}', '${task.description}')">Edit</button></td>
-                            </tr>
-                        `;
+                    rows.forEach(row => {
+                        const cells = row.querySelectorAll('td');
+                        const taskId = cells[2].textContent.trim(); // Task is in the third column
+                        const description = cells[2].textContent.trim(); // Task description
+
+                        if (taskId && description) {
+                            const option = document.createElement('option');
+                            option.value = taskId;
+                            option.textContent = description;
+                            taskSelect.appendChild(option);
+                        }
                     });
 
-                    html += '</tbody></table>';
-                    resultDiv.innerHTML = html;
+                    // Show the popup and overlay
+                    document.getElementById('editPopup').style.display = 'block';
+                    document.getElementById('overlay').style.display = 'block';
                 })
                 .catch(error => {
                     console.error('Error fetching data:', error);
@@ -115,17 +109,7 @@
                 });
         };
 
-        function editTask(taskId, description) {
-            const taskSelect = document.getElementById('taskSelect');
-            taskSelect.innerHTML = `<option value="${taskId}">${description}</option>`;
-
-            // Show the popup and overlay
-            document.getElementById('editPopup').style.display = 'block';
-            document.getElementById('overlay').style.display = 'block';
-        }
-
         function saveTask() {
-            // Here you can handle what to do with the rating and remark data
             const taskId = document.getElementById('taskSelect').value;
             const rating = document.getElementById('rating').value;
             const remark = document.getElementById('remark').value;
