--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
         <h3>Edit Task</h3>
         <form id="editForm">
             <input type="hidden" id="editTaskRowIndex">
-            <label for="rating">Rating (1-5):</label>
-            <input type="number" id="rating" name="rating" min="1" max="5" required><br><br>
+            <label for="rating">Rating:</label>
+            <input type="number" id="rating" name="rating" min="1" max="5"><br><br>
             <label for="remark">Remark:</label>
             <input type="text" id="remark" name="remark"><br><br>
             <button class="button" type="button" onclick="saveTask()">Save</button>
